# SSFitting

./: CMakeLists.txt  README.md
common/: BaseMesh.h  CLoop.cpp  CLoop.h  CatmullClarkSubdT.h  CompositeSqrt2SubdT.h  DGPcommon.h  GaussianCurvatureQuadT.h  GeometryObject.h  Hoppe94LoopEval.cpp  Hoppe94LoopEval.h  Hoppe94LoopSubT.h  LoopEvaluatorT.cpp  LoopEvaluatorT.h  MidpointLinearSubdT.h  OpenMeshMeshType.h  PolyMesh.h  QEMDecimationT.h  QuadricT.h  Stam98ClassicLoopEval.cpp  Stam98ClassicLoopEval.h  TrackballManipulator.cpp  TrackballManipulator.h  Types.h  UnifiedSubd24dbsT.h  VertexFeatureType.h  barycentric.h  geom3d.h  gl.h  gl.hh  laplaciant.h  lpdata50NT.h
data/: trueStump.mtl
src/: CMakeLists.txt  DecimationModel.cpp  DecimationModel.h  DecimationModel_1_sim_para.cpp  DecimationModel_2_resample.cpp  DecimationModel_3_fitting.cpp  DecimationModel_4_fitting_error.cpp  DecimationModel_5_fitting_error_byQAS.cpp  DecimationModel_boundingbox.cpp  DecimationModel_errerRefine.cpp  GUIFrame.cpp  GUIFrame.h  MeshModel.cpp  MeshModel.h  OpenMeshAll.h  QuadraticBezierTriangles.cpp  QuadraticBezierTriangles.h  VHierarchy.h  main.cpp  myreadme.txt
src/EquationSolver_lgq/: EquationSolver.cpp  EquationSolver.h  xVec3.h
src/lib_IDSSsrc/: Readme.txt  bnd_loop.cpp  bnd_loop.h  loopdomain.h  looprange.h
